# PROCOM

./: .gitignore  LICENSE  README.md  demo_ellipse.ggb  oral 20_11.odt  support_camera_v2.FCStd
Divers/: demo_ellipse.ggb
GestionProjet/: procom.gan
IHM/IHM_WIFI/: app_wifi.py
IHM/echo-Alexis/: CMakeLists.txt  with_HTML_IHM.py
IHM_C/: CMakeLists.txt  IHM_C.c  app.py  lwipopts.h
IHM_C/lib/: lib.h
IHM_WIFI/: CMakeLists.txt  IHM_WIFI.c
IHM_filaire-Alexis/: app.py
Integration/: CMakeLists.txt  IHM_WIFI.c  app_wifi.py  app_wifi_simple.py  config.json  main.c  main_demo_cycle_3.c
Integration/lib/camera/: CMakeLists.txt
Integration/lib/camera/include/: camera.h  init_camera.h
Integration/lib/camera/src/: camera.c  init_camera.c  ov7670.c
Integration/lib/wifi/: CMakeLists.txt
Integration/lib/wifi/include/: tcp_server.h  wifi_connect.h  wifi_login.h
Integration/lib/wifi/src/: tcp_server.c  wifi_connect.c
Integration_multicoeur/: CMakeLists.txt  app_wifi.py  app_wifi_save.py  main.c  main_save.c
Modeles/: calle.FCStd
Moteur/: moteur.py  moteur_vs1.c
Moteur_vs1/: CMakeLists.txt  Moteur_vs1.c  moteur_vs2.c
Multithreading/: CMakeLists.txt
TraitementImage/: terminal_viewer.py  viewer.py  viewer_linux.py  vitesse_moteurs.py
blink/: CMakeLists.txt  motor_control.c  pwm_lookup_table.h  test.c
echo - Alexis/: CMakeLists.txt  echo.c  echo.py
echo-Alexis/: CMakeLists.txt  echo.c  echo.py  lwipopts.h  wifi_login.h
lib/: lib.h
lib (unused)/: CMakeLists.txt
lib (unused)/oled/src/: digitRenderer.c
modèles 3d/: calle_v1.stl
(+126 files in other folders)
